# py_decorators

./: .pre-commit-config.yaml  LICENSE  README.md  notes.md  pyproject.toml  setup.py  test.py  tox.ini
.github/workflows/: release.yaml
changelogs/: changelog_0320.md
docs/: conf.py  index.rst  installation.rst
docs/examples/: index.rst  time_utils.rst
docs/reference/: cli.rst  debug.rst  fun.rst  index.rst  info.rst  time.rst
new_sklearn/: example.py  pyproject.toml
pyDeco/: utils.py
pyDeco/cli/: __init__.py  command.py  test.yaml
pyDeco/debug/: __init__.py
pyDeco/debug/debug/: inactive.py  redirect.py  stacktrace.py
pyDeco/dev/debug/: inactive.py  redirect.py  stacktrace.py
pyDeco/fun/: __init__.py  epic_intro.py  explode.py
pyDeco/info/: __init__.py  memory.py  timeit.py
pyDeco/time/: __init__.py  timeit.py
py_deco/deploy/: __init__.py  dev_utils.py
py_deco/dev/: utils.py
py_deco/dev/debug/: inactive.py  redirect.py  stacktrace.py
py_deco/time/: __init__.py  time_utils.py
tests/deploy/: __init__.py  test_dev_utils.py
tests/dev/: __init__.py  test_dev.py  test_dev_utils.py
tests/info/: test_info.py
tests/time/: test_timeit.py
