[tool.poetry]
name = "python-deco"
version = "0.3.7"
description = ""
authors = ["adrian <tamkayeung.adrian@gmail.com>"]
readme = "README.md"
packages = [{ include = "py_deco" }]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
