[tool.poetry]
name = "python-deco"
version = "0.3.16"
description = ""
authors = ["adrian <tamkayeung.adrian@gmail.com>"]
readme = "README.md"
packages = [{ include = "pyDeco" }]
license = "LICENSE"
repository = "https://github.com/kayeungadrian-tam/py_decorators"
homepage = "https://py-decorators.readthedocs.io/en/latest/index.html"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
PyYAML = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
